# taniclaw

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement.md  feature_request.md  research.md  security.md  task.md
taniclaw/: __init__.py  cli.py
taniclaw/api/: __init__.py  deps.py  main.py  schemas.py
taniclaw/api/routers/: __init__.py  actions.py  chat.py  farm.py  plants.py  weather.py
taniclaw/core/: __init__.py  config.py  core.py  knowledge.py  llm.py  memory.py  notification.py  rules.py  scheduler.py  security.py  state.py  tools.py  weather.py
taniclaw/frontend/: app.js  chat.html  index.html  style.css
taniclaw/knowledge/diseases/: common.yaml
taniclaw/knowledge/patterns/: fertilizing.yaml  watering.yaml
taniclaw/knowledge/plants/: chili.yaml  hydroponic.yaml  lettuce.yaml  spinach.yaml  tomato.yaml
taniclaw/models/: __init__.py  action.py  base.py  history.py  plant.py
taniclaw/rules/: fertilizer_rules.yaml  harvest_rules.yaml  rules.yaml  watering_rules.yaml
